# stars

./: .gitignore  Cargo.toml  README.md
examples/: example.sdf  hs_subckt_nopex  picorv32_pre_pnr_nom_tt_025C_1v80.sdf  sky130_subckt  spm.nom.spef  spm__nom_tt_025C_1v80.sdf
sdfparse_fork/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
sdfparse_fork/src/: lib.rs  path.rs  sdf.pest  sdfpest.rs
sdfparse_fork/tests/: spm_simplify.sdf  test_spm_simplify.rs
src/: analysis.rs  cells_transition_combinations.json  graph.rs  html.rs  lib.rs  main.rs  parasitics.rs  pin_capa.json  spice.rs  subckt.rs  types.rs  unateness.json  util.rs
